pipeline/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authorization-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-500"
spec:
  ingressClassName: nginx-authorization
  rules:
  - http:
      paths:
      - path: /role/
        pathType: Prefix
        backend:
          service:
            name: role-api
            port:
              number: 80
